--- a/homecss.css
+++ b/homecss.css
@@ -131,6 +131,74 @@ nav #main-menu li:hover a{
     border-bottom: none;
 }
 
+nav {
+    background-color: rgb(233, 144, 55);
+}
+
+ul {
+    margin-left: 450px;
+    list-style-type: none;
+    padding: 0;
+}
+
+nav #main-menu li a {
+    display: block;
+    padding: 15px 14px;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+}
+
+#main-menu {
+    display: flex;
+}
+
+nav #main-menu li:hover > a {
+    background: #060606;
+    transition: all 0.3s;
+}
+
+#toggle {
+    display: none;
+    background: rgb(233, 144, 55);
+    color: white;
+    text-align: right;
+    padding: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: rgb(233, 144, 55); 
+    padding: 0; 
+    border-radius: 0 0 5px 5px; 
+    z-index: 1000;
+}
+
+.nav-item:hover .dropdown-menu {
+    display: block;
+}
+
+.dropdown-menu .dropdown-item {
+    border-bottom: 1px solid white;
+    padding: 8px 16px;
+    color: white;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-menu .dropdown-item:last-child {
+    border-bottom: none;
+}
+
+.dropdown-menu .dropdown-item:hover {
+    background: #060606;
+    transition: all 0.3s;
+}
+
 
 
 /* SLIDER */
