--- a/homecss.css
+++ b/homecss.css
@@ -14,24 +14,32 @@ body {
 }
 
 .table-banner{
-	width: 90%;
+	width: 100%;
+}
+
+#id1 {
+    width: 83%;
+}
+
+#id2 {
+    width: 17%;
 }
 
 #title1{
-	margin-left: 18%;
+	margin-left: 12%;
 	font-family: sans-serif;
 	color: white;
 }
 
 .baner-icon{
-    padding-left: 76%;
+    /* padding-left: 76%; */
 	font-size: 18px;
 }
 
 #icon1{
 	color: white;
 }
-
+ 
 
 
 /* cho phần 2 */
@@ -452,10 +460,9 @@ margin-left: 10%;
 
 /* FOOTER */
 footer {
-    margin-top: 70px;
-    margin-bottom: 0px;
+    margin-top: 120px;
     background-color: rgb(233, 144, 55);
-    padding: 40px 0;
+    padding: 30px 0;
     color: #343a40;
 }
 
@@ -463,7 +470,7 @@ footer h4 {
     font-size: 20px;
     font-family: sans-serif;
     font-weight: bold;
-    margin-bottom: 20px;
+    padding-bottom: 25px;
 }
 
 footer p, footer a {
@@ -477,9 +484,6 @@ footer a:hover {
     text-decoration: none;
 }
 
-.footer-col {
-    margin-bottom: 30px;
-}
 
 .map-container {
     position: relative;
@@ -497,16 +501,43 @@ footer a:hover {
     background-color: aliceblue;
     width: 200px;
     height: 200px;
-    border-radius: 50%;
     display: block;
-    margin-inline-start: 8px;
-    margin-bottom: 50px;
+    margin-inline-start: -9px;
+    margin-bottom: 30px;
+}
+
+.container hr {
+    margin-top: -10px;
+    margin-bottom: 10px;
+}
+
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#banquyen {
+    margin: 0;
+}
+
+#backToTopBtn {
+    border: none; 
+    outline: none; 
+    background-color: rgb(233, 144, 55);
+    cursor: pointer;  
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#backToTopBtn:hover {
+    background-color:  rgba(85, 85, 85, 0.7); 
 }
 
 
 
 /* CHATBOX */
-/* CSS */
 .chat-container {
     position: fixed;
     bottom: 20px;
