--- a/CSS.css
+++ b/CSS.css
@@ -8,29 +8,24 @@ body{
 
 /* cho phần 1 */
 #baner{
-	
-	padding-top: 10px;
 	width: 100%;
-	height: 60px;
+	height: 35px;
 	background-color: rgb(233, 144, 55);
 }
 
 .table-banner{
-	width: 80%;
-	margin-right: 300px;
-	margin-left: 300px;
+	width: 90%;
 }
 
 #title1{
-	text-align: left;
-	font-family: Arial;
+	margin-left: 18%;
+	font-family: sans-serif;
 	color: white;
-	
 }
 
 .baner-icon{
+    padding-left: 76%;
 	font-size: 18px;
-	margin-left: -10px;
 }
 
 #icon1{
@@ -39,49 +34,67 @@ body{
 
 
 
+
 /* cho phần 2 */
 #baner1{
-
+    display: ruby-text;
+    padding-top: 5px;
 	font-size: 18px;
 	width: 100%;
-	height: 60px;
-	text-align: center;
-	
+	height: 70px;
 }
 
-#combox{
-	width: 5%;
-	position: relative;
-	top: 20%;
-	border-radius: 5cap;
-	border-width: 1px;	
+.logoD {
+    margin-left: 8%;
 }
 
-#text{
-	width: 30%;
-	position: relative;
-	top: 20%;
-	border-radius: 5cap;
-	border-width: 1px;
+/* search */
+.searchform {
+    width: 50%;
+    margin-right: auto;
+    padding-left: 15%;
+    color: #060606;
 }
 
-#icon4{
-	position: relative;
-	top: 20%;
-	right: 3%;
-	color: lightgrey;
+input.form-control {
+    border-right: none;
+    border-radius: 20px 0 0 20px; 
 }
 
-.icon5{
-	position: relative;
-	top: 20%;
-	left: 9%
+button.form-control.search {
+    width: auto;
+    background-color: #0b0b0b;
+    color: white;
+    cursor: pointer;
+    border-left: none; 
+    border-radius: 0 20px 20px 0; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 15px;
+}
+
+.icon-main {
+	margin-right: 150px;
+    padding-left: 15%;
+}
+
+.icon5 {
+    font-size: 20px;
+    color: #040404;
+    font-size: 18px;
+	margin-left: -10px;
+}
+#search-all{
+	width: 100%;
+	display: flex;
 }
 
 
 /* Phần thứ 3 */
 
 
+/* Phần thứ 3 */
 nav{
 	background-color: rgb(233, 144, 55);
 }
@@ -99,12 +112,13 @@ nav #main-menu li a{
 	color: white;
 	text-decoration: none;
 }
+
 #main-menu{
 	display: flex;
 }
 
 nav #main-menu li:hover a{
-	background: #a5d958;
+	background: #060606;
 	transition: all 0.3s;
 }
 
@@ -117,6 +131,86 @@ nav #main-menu li:hover a{
 	font-size: 20px;
 	cursor: pointer;
 }
+
+.dropdown-menu .dropdown-item {
+    border-bottom: 1px solid white; 
+    padding: 8px 16px; 
+}
+
+.dropdown-menu .dropdown-item:last-child {
+    border-bottom: none;
+}
+
+nav {
+    background-color: rgb(233, 144, 55);
+}
+
+ul {
+    margin-left: 450px;
+    list-style-type: none;
+    padding: 0;
+}
+
+nav #main-menu li a {
+    display: block;
+    padding: 15px 14px;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+}
+
+#main-menu {
+    display: flex;
+}
+
+nav #main-menu li:hover > a {
+    background: #060606;
+    transition: all 0.3s;
+}
+
+#toggle {
+    display: none;
+    background: rgb(233, 144, 55);
+    color: white;
+    text-align: right;
+    padding: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: rgb(233, 144, 55); 
+    padding: 0; 
+    border-radius: 0 0 5px 5px; 
+    z-index: 1000;
+
+}
+
+.nav-item:hover .dropdown-menu {
+    display: block;
+}
+
+.dropdown-menu .dropdown-item {
+    border-bottom: 1px solid white;
+    padding: 8px 16px;
+    color: white;
+    text-decoration: none;
+    display: block;
+	width: 270px;
+}
+
+.dropdown-menu .dropdown-item:last-child {
+    border-bottom: none;
+}
+
+.dropdown-menu .dropdown-item:hover {
+    background: #060606;
+    transition: all 0.3s;
+}
+
 
 /* Nội dung trang cửa hàng*/
 
@@ -246,6 +340,7 @@ nav #main-menu li:hover a{
 }
 
 #giakhuyenmai1{
+	text-decoration: line-through;
 	font-size: 10px;
 	color: grey;
 }
@@ -260,6 +355,10 @@ nav #main-menu li:hover a{
 	width: 30%;
 }
 
+#cot1:hover{
+	transform: scale(1.1) ;
+}
+
 #cot2{
 	width: 70%;
 }
@@ -272,12 +371,10 @@ nav #main-menu li:hover a{
     box-shadow: 0 4px 9px rgba(0, 0, 0, 0.1);
 }
 
-#gach3{
-	border-color: black;
-	width: 30%;
-	margin-top: -23%;
-	margin-left: 5%;
+#hang1:hover{
+	transform: scale(1.1) ;
 }
+
 
 #left-danhsach{
 	font-size: 18px;
@@ -288,16 +385,11 @@ nav #main-menu li:hover a{
 	color: rgb(58, 120, 255);
 }
 
-/* #top{
-	background-image:url("https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/rcmd/06720e49514cbd94b755.png");
-	background-size:32px 40px;
-	color:white;
-	font-size:10px;
-	line-height:16.8px;
-	text-align:left;
-	width: 14%;
-	height: 40px;
-} */
+#left-sanpham{
+	margin-top: -5%;
+}
+
+
 
  /*content*/
 #sale{
@@ -320,6 +412,7 @@ nav #main-menu li:hover a{
     backdrop-filter: blur(10px); /* Tạo hiệu ứng nhòe */
     border-radius: 2px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	cursor: pointer;
 }
 
 #sanpham1{
@@ -329,6 +422,7 @@ nav #main-menu li:hover a{
     backdrop-filter: blur(10px); /* Tạo hiệu ứng nhòe */
     border-radius: 2px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	cursor: pointer;
 }
 
 #anh{
@@ -337,31 +431,38 @@ nav #main-menu li:hover a{
 	border: 10px solid rgb(233, 144, 55);
 	border-radius: 3px;
 	text-align: center;
+	transition: 0.5s;
+}
+
+#sanpham:hover{
+    transform: scale(1.1);
+}
+
+#sanpham1:hover{
+    transform: scale(1.1);
 }
 
 #mucluc{
 	color: grey;
 }
 
-#chitiet{
+#chitiet a{
 	color: rgb(233, 144, 55) ;
+	text-decoration: none;
+}
+
+#chitiet a:hover{
+	color: rgb(58, 120, 255);
 }
 
 #giakhuyenmai{
 	color: grey;
+	text-decoration: line-through;
 }
 
 #dongia{
 	font-size: 16px;
 	color: black;
-}
-
-#gach2{
-	border-color: black;
-	width: 24%;
-	margin-top: -11%;
-	margin-left:45px;
-
 }
 
 
@@ -395,16 +496,24 @@ nav #main-menu li:hover a{
 }
 
 #tron1{
-	color: rgb(233, 144, 55);
+	color: rgb(207, 163, 141);
 	font-size: 35px;
 }
 
 #trang1{
 	font-size: 20px;
-	color: white;
+	color: rgb(255, 255, 255);
 	position: relative;
 	top: -5px;
 	left: -23px;
+}
+
+#tron1:hover{
+	color: rgb(233, 144, 55);
+}
+
+#trang1:hover{
+	color: white;
 }
 
 /* Nội dung trang giới thiệu */
@@ -426,96 +535,6 @@ nav #main-menu li:hover a{
     margin-top: 15px;
 }
 
-/* Nội dung phần blog */
-#content button {
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    width: 410px;
-    height: 420px;
-    border: none;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-}
-
-#content img {
-    width: 100%;
-    height: 60%;
-    object-fit: cover;
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    right: 0;
-    margin: auto; 
-}
-
-.blog-list {
-    width: 100%;
-    height: 40%;
-	flex: 1;
-    display: flex;
-    flex-direction: column;
-	justify-content: flex-end;
-    align-items: center;
-}
-
-.blog-list a {
-    color: black;
-    text-decoration: none; 
-    text-align: center;
-}
-
-.blog-list a:hover {
-    color: rgb(58, 120, 255);
-}
-
-.blog-list p {
-    margin: 8px 0;
-    font-size: 16px;
-	display: flex;
-    flex-direction: column;
-	justify-content: flex-start;
-}
-
-.blog-list hr {
-    background-color: black;
-    border: none;
-    height: 2px;
-    width: 8%;
-    margin: 10px auto;
-}
-#chuyenTrang{
-	height: 45px;
-    display: flex;
-	justify-content: center;
-    align-items: center;
-	margin-bottom: 30px;
-}
-#chuyenTrang button{
-	background-color: #FFF;
-	height: 32px;
-    width: 32px;
-	border-radius: 50%;
-	border: 2px solid black;
-	align-items: center;
-	margin: 0 5px;
-}
-#chuyenTrang a{
-	color: black;
-	text-decoration: none; 
-}
-#chuyenTrang a:hover {
-	color: #FFF;
-}
-#chuyenTrang button:hover {
-	background-color: rgb(244, 179, 114);
-	border: 2px solid rgb(233, 144, 55);
-}
-
 
 
 /* phần cuối */
@@ -527,191 +546,317 @@ nav #main-menu li:hover a{
 	background-color: rgb(233, 144, 55);
 }
 
-/* Reponsive cửa hàng*/
-@media (max-width: 600px) {
-	/* phần 1 */
-	#title1{
-		font-size: 15px;
-		position: relative;
-		right: 200px;
-		padding-top: 10px;
-		}
 
-	.baner-icon{
-		display: flex;
-		font-size: 15px;
-		padding-top: 20px;
-		position: relative;
-		right: 58%;
-	}
-	/* phần 2 */
+/* cho riêng sản phẩm */
+#sale{
+	background-color:#ffe97a;
+	border-radius: 0px 0px 0px 2px;
+	font-size: 10px;
+	height: 17px;
+	width: 17%;
+	line-height:20px;
+	color:#ec3814;
+	position: relative;
+	right: 3%;
+}
 
-	#icon4{
-		display: none;
-	}
+ #sanpham{
+	text-align: center;
+	margin-left: 20px;
+	margin-top: 27px;
+	border: 5px solid  rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px); /* Tạo hiệu ứng nhòe */
+    border-radius: 2px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	cursor: pointer;
+}
 
-	#combox{
-		width: 15%;
-	}
+#sanpham1{
+	text-align: center;
+	margin-left: 20px;
+	border: 5px solid  rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px); /* Tạo hiệu ứng nhòe */
+    border-radius: 2px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	cursor: pointer;
+}
 
-	#text{
-		width: 20%;
-	}
-/* phần menu */
-	#main-menu{
-		margin-left: -50px;
-		flex-direction: column;
-		text-align: center;
-	}
+#anh{
+	width: 100%;
+	height: 200px;
+	border: 10px solid rgb(233, 144, 55);
+	border-radius: 3px;
+	text-align: center;
+	transition: 0.5s;
+}
 
-	#toggle{
-		display: block;
+#sanpham:hover{
+    transform: scale(1.1);
+}
 
-	}
-	nav{
-		display: none;
-	}
+#sanpham1:hover{
+    transform: scale(1.1);
+}
 
-	/* phần 4  */
-	#maincontent{
-		margin: 0%;
-	}
-	
-	#slide1, #slide2{
-		margin-top: 10px;
-		font-size: 15px;
-	}
+#mucluc{
+	color: grey;
+}
 
-	/* content */
-/* left */
-	#left-danhsach{
-		font-size: 15px;
-	 }
-	 #left-giaban{
-		display: none;
-	 }
-	 #left-sanpham{
-		display: none;
-	 }
-/* center1 */
-#center1{
-	width: 70%;
+#chitiet{
+	color: rgb(233, 144, 55) ;
+}
+
+#giakhuyenmai{
+	color: grey;
+}
+
+#dongia{
+	font-size: 16px;
+	color: black;
 }
 
 #gach2{
-	width: 18%;
-	margin-top: -8%;
-	margin-left: 31%;
+	border-color: black;
+	width: 24%;
+	margin-top: -11%;
+	margin-left:45px;
+
 }
 
-#center2{
-	margin-left: 120px;
-	width: 70%;
-	margin-right: 20px;
+/* hết */
+
+
+/* Reponsive cửa hàng*/
+@media (max-width: 1400px){
+	/* baner */
+	#title1{
+		margin-left: -42%;
+	}
+	.baner-icon{
+		margin-left: -25%;
+	}
+	/* baner1 */
+	#combox{
+		width: 10%;
+	}
+	/* menu */
+	#main-menu{
+		margin-left: 19%;
+	}
+
+	/* maincontent */
+	#maincontent{
+		margin-left: 5%;
+		margin-right: 5%;
+	}
+
+	#gach2{
+		position: relative;
+		left: 2%;
+	}
+
+	#gach3{
+		position: relative;
+		left: -4%;
+	}
+
+
 }
 
-#right{
-	margin-top: 5px;
-	margin-left: 100px;
-	width: 70%;
-	margin-right: 20px;
+
+@media (max-width:960px) {
+	#title1{
+		margin-left: -50%;
+	}
+	.baner-icon{
+		margin-left: -45%;
+	}
+
+	#gach2{
+		width: 30%;
+		position: relative;
+		top: -5px;
+		left: -15px;
+	}
 }
+
+@media (max-width: 850px){
+
+	#title1{
+		margin-left: -60%;
+	}
+
+	.baner-icon{
+		margin-left: -65%;
+	}
+
+	#main-menu{
+		margin-left: 70px;
+	}
+
+	#gach2{
+		position: relative;
+		left: -25px;
+	}
+
+	#gach3{
+		width: 35%;
+		position: relative;
+		top: -25px;
+	}
+
+	#allcontent{
+		display: flex;
+		flex-wrap: wrap;
+	}
+	#left{
+		width: 30%;
+	}
+
+	#center1{
+		margin-left: 100px;
+		width: 50%;
+	}
+
+	#gach2{
+		width: 18%;
+		position: relative;
+		top: 13px;
+		left: 60px;
+	}
+
+	#gach3{
+		position: relative;
+		top: 2px;
+	}
+
+	#center2{
+		margin-top: 50px;
+		width: 50%;
+	}
+	#right{
+		margin-top: 50px;
+		width: 50%;
+	}
+
 
 }
 
 
 @media (max-width: 768px) {
-	/* phần 1 */
-	#title1{
-		font-size: 15px;
-		position: relative;
-		right: 200px;
-		padding-top: 0px;
-		}
 
-	.baner-icon{
-		display: flex;
-		font-size: 15px;
-		padding-top: 0px;
-		position: relative;
-		right: 170%;
-	}
-	/* phần 2 */
+#title1{
+	margin-left: -70%;
+}	
+.baner-icon{
+	margin-left: -80%;
+}
 
-	#icon4{
-		display: none;
-	}
+#icon4{
+	display: none;
+}	
 
-	#combox{
-		width: 15%;
-	}
-
-	#text{
-		width: 20%;
-	}
 /* phần menu */
-	#main-menu{
-		margin-left: -50px;
-		flex-direction: column;
-		text-align: center;
-	}
+#main-menu{
+	margin-left: -50px;
+	flex-direction: column;
+	text-align: center;
+}
 
-	#toggle{
-		display: block;
+#toggle{
+	display: block;
 
-	}
-	nav{
-		display: none;
-	}
+}
+nav{
+	display: none;
+}
 
-	/* phần 4  */
-	#maincontent{
-		margin: 0%;
-	}
+#left{
+	width: 30%;
+}
 	
-	#slide1, #slide2{
-		margin-top: 10px;
-		font-size: 15px;
-	}
 
-	/* content */
-/* left */
-	#left-danhsach{
-		font-size: 15px;
-	 }
-	 #left-giaban{
-		display: none;
-	 }
-	 #left-sanpham{
-		display: none;
-	 }
-/* center1 */
+#left-giaban{
+	display: none;
+}
+
+
 #center1{
-	width: 70%;
-
+	margin-left: 130px;
 }
 
 #gach2{
-	width: 13%;
-	margin-top: -6%;
-	margin-left: 35%;
+	position: relative;
+	top: 10px;
+	left: 50px;
 }
 
-#center2{
-	margin-left: 150px;
-	width: 70%;
-	margin-right: 20px;
+#gach3{
+	position: relative;
+	top: -2px;
 }
 
-#right{
-	margin-top: 5px;
-	margin-left: 0px;
-	width: 70%;
-	margin-right:30px;
 }
+
+@media (max-width: 600px){
+	#title1{
+		position: relative;
+		left: -180px;
+	}
+	.baner-icon{
+		position: relative;
+		left: 90px;
+	}
+
+	#slide1{
+		width: 100%;
+		font-size: 15px;
+		margin-right:-100px;
+	}
+	#slide2{
+		width: 100%;
+		font-size: 15px;
+	}
+
+	#left{
+		width: 40%;
+	}
+
+	#left-danhsach{
+		font-size: 15px;
+	}
+
+	#center1{
+		width: 50%;
+		margin-left: 40px;;
+	}
+
+	#center2{
+		width: 50%;
+		margin-top: -20px;
+	}
+
+	#right{
+		width: 50%;
+		margin-top: -20px;
+	}
+	#gach2{
+		width: 30%;
+		position: relative;
+		top: -3px;
+		left: -10px;
+	}
+
+	#gach3{
+		position: relative;
+		top: -25px;
+	}
 
 
 }
+
+
+
 
 
 /* reponsive cho giới thiệu */
@@ -795,11 +940,11 @@ nav #main-menu li:hover a{
 
 
 
-	
-
 
 	
 
+
+	
 
 
 
