--- a/Lienhecss.css
+++ b/Lienhecss.css
@@ -209,255 +209,65 @@ nav #main-menu li:hover > a {
 
 
 
-/* SLIDER */
-.carousel {
-    position: relative;
-    margin-top: 35px;
-    margin-right: 10%;
-    margin-left: 10%;
-}
 
-.carousel-inner {
+/* CONTENT */
+  #container-content {
+    background-color: #ffffff;
+    margin-top: 80px;
+    padding: 20px;
     border-radius: 10px;
-    width: 100%;
-    height: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  #h2-branch {
+    padding-top: 80px;
+    padding-bottom: 50px;
+  }
+  .form-group label {
+    font-weight: bold;
+  }
+  .btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+  }
+  .btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #004085;
+  }
+
+
+
+
+/* CHI NHÁNH */
+/* #container_main {
+    margin-top: 80px;
 }
 
-.carousel-item img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+#container_main h2 {
+    padding-top: 60px;
+} */
+
+.card {
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgb(233, 144, 55); 
 }
 
+.card h4 {
+    color: rgb(233, 144, 55); 
+} 
 
-/* LINE ngăn cách  */
-.lineleft {
-    margin-right: 2%;
-    margin-left: 10%;
-    margin-top: 68px;
-    display: inline-block;
-    width: 26%; 
-    border-bottom: 1px solid grey;
-}
-
-.lineright {
-    margin-right: 10%;
-    margin-left: 2%;
-    margin-top: 68px;
-    display: inline-block;
-    width: 27%; 
-    border-bottom: 1px solid grey;
-}
-
-.centerSpan {
-    color: rgb(233, 144, 55);
-    margin-top: 65px;
-    font-size: 25px;
-    font-family: sans-serif;
- 
-}
-
-
-
-/*  CONTENT 1: Danh Mục Sản Phẩm  */
-* {
-    box-sizing: border-box;
-}
-
-.main-img {
-    margin-right: 10%;
-    margin-left: 10%;
-    margin-top: 50px;
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.image-container1 {
-    position: relative;
-    margin: 10px;
-    text-align: center;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-.circle-img {
-    margin-bottom: 30px;
-    width: 225px;  
-    height: 225px; 
-    border-radius: 50%;
-    object-fit: cover;
-    transition: transform 0.1s ease; /* Thêm hiệu ứng chuyển đổi */
-}
-
-.circle-img:hover {
-    transform: scale(1.2); /* Phóng to khi di chuột */
-}
-
-.image-caption {
-    margin-bottom: 20px;
-    position: absolute;
-    padding-left: 20px;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    font: 20px bold;
-    color: rgb(255, 255, 255);
-    background-color: rgba(241, 139, 37, 0.5); 
-    text-align: center;
-    padding: 5px 0;
-    border-bottom-left-radius: 50%; 
-    border-bottom-right-radius: 50%; 
+#h2-branch {
+    color: rgb(233, 144, 55); 
 }
 
 
 
 
-/* <!-- CONTENT 2: Sản Phẩm Bán Chạy --> */
-.image-container2 {
-    width: 200px;
-    display: inline-block; 
-    margin: 20px;
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.1);
-    border-radius: 8px; 
-    overflow: hidden; 
-    text-align: center;
-    scroll-padding-top: 5px;
-}
-
-.square-img {
-    width: 200px; 
-    height: 200px;
-    object-fit: cover; 
-    border: 8px solid rgb(233, 144, 55);
-}
-
-.image-content {
-    padding: 10px; 
-    background-color: white; 
-    border-radius: 0 0 8px 8px;
-}
-
-.image-container2 p {
-    color: rgb(59, 113, 160);
-}
-
-
-
-/* <!-- CONTENT 3: Tin tức --> */
-.image-container3 {
-    width: 300px;
-    height: 290px;
-    display: inline-block; 
-    margin: 20px;
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.1);
-    border-radius: 4px; 
-    overflow: hidden; 
-    text-align: center;
-    padding-top: 5px;
-}
-.square-img3 {
-    width: 300px; 
-    height: 290px;
-    object-fit: cover; 
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.1);
-}
-
-.image-container3 img { 
-    border-radius: 7px;
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    height: 145px;
-}
-.image-content3 {
-    width: 300px;
-    height: 145px;
-    background-color: white; 
-    border-radius: 0 0 8px 8px;
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.1); /* Thêm box-shadow vào phần này */
-}
-
-
-.image-container3 h4 {
-    color: rgb(0, 0, 0);
-    padding-top: 10px;
-    padding-left: 8px; 
-    padding-right: 8px;
-}
-
-.image-container3 h5 {
-    color: rgb(233, 144, 55);
-    padding-left: 8px; 
-    padding-right: 8px;
-}
-
-.image-container3 p {
-    color: rgb(0, 0, 0);
-    padding-top: 10px; 
-}
-
-
-
-/* <!-- CONTENT 4: Feedback --> */
-.image-container4 {
-    width: 300px;
-    height: 290px;
-    display: inline-block; 
-    margin: 20px;
-    box-shadow: 0 4px 9px rgba(23, 102, 214, 0.1);
-    border-radius: 4px;
-    overflow: hidden; 
-    text-align: center;
-    padding-top: 5px;
-}
-.square-img4 {
-    width: 300px; 
-    height: 290px;
-    object-fit: cover; 
-    box-shadow: 0 4px 9px rgba(23, 102, 214, 0.1);
-}
-
-.image-container4 img { 
-    background-color: rgb(233, 144, 55);
-    border-radius: 7px;
-    box-shadow: 0 4px 9px rgba(11, 12, 12, 0.1);
-    border: 8px solid rgb(233, 144, 55);
-    width: 200px;
-    height: 150px;
-}
-.image-content4 {
-    width: 300px;
-    height: 150px;
-    padding: 10px; 
-    background-color: rgb(183, 222, 227);
-    border-radius: 4px 4px 4px 4px;
-}
-
-.image-container4 h4 {
-    color: rgb(0, 0, 0);
-    padding-top: 10px;
-    padding-left: 8px; 
-    padding-right: 8px;
-}
-
-.image-container4 h5 {
-    color: rgb(0, 0, 0);
-    padding-left: 8px; 
-    padding-right: 8px;
-}
-
-.image-container4 p {
-    color: rgb(0, 0, 0);
-    padding-top: 10px; 
-}
 
 
 
 
+
+  
 /* FOOTER */
 footer {
     margin-top: 120px;
@@ -514,6 +324,7 @@ footer a:hover {
 
 
 .footer-bottom {
+    margin-bottom: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -611,5 +422,3 @@ footer a:hover {
     80% { transform: translateX(5px); }
     100% { transform: translateX(0); }
 }
-
-
